[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-watermark-remover"
version = "1.0.0"
description = "Remove text watermarks from PDF files"
requires-python = ">=3.8"
dependencies = ["pikepdf>=8.0.0"]

[project.scripts]
remove-watermark = "remove_watermark:main"
